tests/baselines/reference/duplicateExportAssignments.errors.txt
foo1.ts(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo1.ts(3,10): error TS2300: Duplicate identifier 'export='.
foo1.ts(4,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo1.ts(4,10): error TS2300: Duplicate identifier 'export='.
foo2.ts(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo2.ts(3,10): error TS2300: Duplicate identifier 'export='.
foo2.ts(4,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo2.ts(4,10): error TS2300: Duplicate identifier 'export='.
foo3.ts(7,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo3.ts(7,10): error TS2300: Duplicate identifier 'export='.
foo3.ts(8,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo3.ts(8,10): error TS2300: Duplicate identifier 'export='.
foo4.ts(1,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo4.ts(1,10): error TS2300: Duplicate identifier 'export='.
foo4.ts(8,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo4.ts(8,10): error TS2300: Duplicate identifier 'export='.
foo5.ts(4,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo5.ts(4,10): error TS2300: Duplicate identifier 'export='.
foo5.ts(5,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo5.ts(5,10): error TS2300: Duplicate identifier 'export='.
foo5.ts(6,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo5.ts(6,10): error TS2300: Duplicate identifier 'export='.


==== foo1.ts (4 errors) ====
    var x = 10;
    var y = 20;
    export = x;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    
==== foo2.ts (4 errors) ====
    var x = 10;
    class y {};
    export = x;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    
==== foo3.ts (4 errors) ====
    module x {
    	export var x = 10;
    }
    class y {
    	y: number;
    }
    export = x;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    
==== foo4.ts (4 errors) ====
    export = x;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    function x(){
    	return 42;
    }
    function y(){
    	return 42;
    }
    export = y;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    
==== foo5.ts (6 errors) ====
    var x = 5;
    var y = "test";
    var z = {};
    export = x;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = z;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
             ~
!!! error TS2300: Duplicate identifier 'export='.
    